// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiToken is rendered 1`] = `
<div
  class="euiToken euiToken--tokenTint01 euiToken--square euiToken--small"
>
  <svg
    class="euiIcon euiIcon--medium euiIcon-isLoading"
    focusable="false"
    height="16"
    viewBox="0 0 16 16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  />
</div>
`;

exports[`EuiToken props color tokenTint01 is rendered 1`] = `
<div
  class="euiToken euiToken--tokenTint01 euiToken--square euiToken--small"
>
  <svg
    class="euiIcon euiIcon--medium euiIcon-isLoading"
    focusable="false"
    height="16"
    viewBox="0 0 16 16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  />
</div>
`;

exports[`EuiToken props color tokenTint02 is rendered 1`] = `
<div
  class="euiToken euiToken--tokenTint02 euiToken--square euiToken--small"
>
  <svg
    class="euiIcon euiIcon--medium euiIcon-isLoading"
    focusable="false"
    height="16"
    viewBox="0 0 16 16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  />
</div>
`;

exports[`EuiToken props color tokenTint03 is rendered 1`] = `
<div
  class="euiToken euiToken--tokenTint03 euiToken--square euiToken--small"
>
  <svg
    class="euiIcon euiIcon--medium euiIcon-isLoading"
    focusable="false"
    height="16"
    viewBox="0 0 16 16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  />
</div>
`;

exports[`EuiToken props color tokenTint04 is rendered 1`] = `
<div
  class="euiToken euiToken--tokenTint04 euiToken--square euiToken--small"
>
  <svg
    class="euiIcon euiIcon--medium euiIcon-isLoading"
    focusable="false"
    height="16"
    viewBox="0 0 16 16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  />
</div>
`;

exports[`EuiToken props color tokenTint05 is rendered 1`] = `
<div
  class="euiToken euiToken--tokenTint05 euiToken--square euiToken--small"
>
  <svg
    class="euiIcon euiIcon--medium euiIcon-isLoading"
    focusable="false"
    height="16"
    viewBox="0 0 16 16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  />
</div>
`;

exports[`EuiToken props color tokenTint06 is rendered 1`] = `
<div
  class="euiToken euiToken--tokenTint06 euiToken--square euiToken--small"
>
  <svg
    class="euiIcon euiIcon--medium euiIcon-isLoading"
    focusable="false"
    height="16"
    viewBox="0 0 16 16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  />
</div>
`;

exports[`EuiToken props color tokenTint07 is rendered 1`] = `
<div
  class="euiToken euiToken--tokenTint07 euiToken--square euiToken--small"
>
  <svg
    class="euiIcon euiIcon--medium euiIcon-isLoading"
    focusable="false"
    height="16"
    viewBox="0 0 16 16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  />
</div>
`;

exports[`EuiToken props color tokenTint08 is rendered 1`] = `
<div
  class="euiToken euiToken--tokenTint08 euiToken--square euiToken--small"
>
  <svg
    class="euiIcon euiIcon--medium euiIcon-isLoading"
    focusable="false"
    height="16"
    viewBox="0 0 16 16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  />
</div>
`;

exports[`EuiToken props color tokenTint09 is rendered 1`] = `
<div
  class="euiToken euiToken--tokenTint09 euiToken--square euiToken--small"
>
  <svg
    class="euiIcon euiIcon--medium euiIcon-isLoading"
    focusable="false"
    height="16"
    viewBox="0 0 16 16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  />
</div>
`;

exports[`EuiToken props color tokenTint10 is rendered 1`] = `
<div
  class="euiToken euiToken--tokenTint10 euiToken--square euiToken--small"
>
  <svg
    class="euiIcon euiIcon--medium euiIcon-isLoading"
    focusable="false"
    height="16"
    viewBox="0 0 16 16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  />
</div>
`;

exports[`EuiToken props shape circle is rendered 1`] = `
<div
  class="euiToken euiToken--tokenTint01 euiToken--circle euiToken--small"
>
  <svg
    class="euiIcon euiIcon--medium euiIcon-isLoading"
    focusable="false"
    height="16"
    viewBox="0 0 16 16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  />
</div>
`;

exports[`EuiToken props shape rectangle is rendered 1`] = `
<div
  class="euiToken euiToken--tokenTint01 euiToken--rectangle euiToken--small"
>
  <svg
    class="euiIcon euiIcon--medium euiIcon-isLoading"
    focusable="false"
    height="16"
    viewBox="0 0 16 16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  />
</div>
`;

exports[`EuiToken props shape square is rendered 1`] = `
<div
  class="euiToken euiToken--tokenTint01 euiToken--square euiToken--small"
>
  <svg
    class="euiIcon euiIcon--medium euiIcon-isLoading"
    focusable="false"
    height="16"
    viewBox="0 0 16 16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  />
</div>
`;

exports[`EuiToken props size l is rendered 1`] = `
<div
  class="euiToken euiToken--tokenTint01 euiToken--circle euiToken--large"
>
  <svg
    class="euiIcon euiIcon--medium euiIcon-isLoading"
    focusable="false"
    height="16"
    viewBox="0 0 16 16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  />
</div>
`;

exports[`EuiToken props size m is rendered 1`] = `
<div
  class="euiToken euiToken--tokenTint01 euiToken--circle euiToken--medium"
>
  <svg
    class="euiIcon euiIcon--medium euiIcon-isLoading"
    focusable="false"
    height="16"
    viewBox="0 0 16 16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  />
</div>
`;

exports[`EuiToken props size s is rendered 1`] = `
<div
  class="euiToken euiToken--tokenTint01 euiToken--circle euiToken--small"
>
  <svg
    class="euiIcon euiIcon--medium euiIcon-isLoading"
    focusable="false"
    height="16"
    viewBox="0 0 16 16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  />
</div>
`;
